--- a/lista.html
+++ b/lista.html
@@ -70,8 +70,8 @@
   function listByID(id) {
     myList.innerHTML = ""
     id = document.getElementById(`id`).value
-    fetch('http://127.0.0.1:3000/clientes/' + id)
-   // fetch('https://herbertborgesnetlify.app:3000/clientes/' + id)
+  //fetch('http://127.0.0.1:3000/clientes/' + id)
+   fetch('https://herbertborges.netlify.app/:3000/clientes/' + id)
 
       .then(function (response) {
         console.log(response)
