--- a/lista.html
+++ b/lista.html
@@ -71,7 +71,7 @@
     myList.innerHTML = ""
     id = document.getElementById(`id`).value
   //fetch('http://127.0.0.1:3000/clientes/' + id)
-   fetch('https://herbertborges.netlify.app/clientes/' + id)
+   fetch('https://herbertborges.netlify.app:3000/clientes/' + id)
 
       .then(function (response) {
         console.log(response)
